# eit-vr-2026-gruppe7

./: README.md
backproject-opengl/: .gitignore  CMakeLists.txt  README.md  backproject.cpp  backproject.h  fbx_exporter.cpp  fbx_exporter.h  fbx_loader.cpp  fbx_loader.h  main.cpp  renderer.cpp  renderer.h  scene_data.h  scene_geometry.cpp  scene_geometry.h
backproject-opengl/resources/: aruco_detections.csv  cameras.txt
model/: predict_webcam.py  requirements.txt
model/yolo_segmentation_training/: Job.slurm  README.md  config.yaml  train.py
utils/: aruco_detection.py  convert.py
